[package]
name = "wormhole-staking-program"
version = "1.3.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
mock-clock = []
wasm = ["no-entrypoint", "js-sys", "bincode"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []
testnet = ["wormhole-solana-consts/testnet"]

[dependencies]
anchor-lang = {version ="0.30.1", features = ["init-if-needed"]}
anchor-spl = "0.30.1"
anchor-attribute-error = "0.30.1"
wasm-bindgen = "0.2.92"
js-sys = { version = "0.3.56", optional = true }
bincode = { version = "1.3.3", optional = true }
bytemuck = { version = "1.16.3", features = ["derive"] }
solana-zk-token-sdk = "1.18.21"
wormhole-solana-consts = { version = "0.3.0-alpha.1", features = ["testnet"] }

[dev-dependencies]
rand = "0.8.5"
quickcheck = "1"
quickcheck_macros = "1"

[profile.release]
overflow-checks = true

[toolchain]
anchor_version = "0.30.1"
