[package]
name = "wormhole-staking-program"
version = "1.4.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
mock-clock = []
wasm = ["no-entrypoint", "js-sys", "bincode"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = ["mock-clock"]
testnet = ["wormhole-solana-consts/testnet"]

[dependencies]
anchor-lang = {version ="0.30.1", features = ["init-if-needed"]}
anchor-spl = "0.30.1"
anchor-attribute-error = "0.30.1"
wasm-bindgen = "0.2.93"
js-sys = { version = "0.3.70", optional = true }
bincode = { version = "1.3.3", optional = true }
bytemuck = { version = "1.16.3", features = ["derive"] }
solana-zk-token-sdk = "1.18.21"
wormhole-solana-consts = { version = "0.3.0-alpha.1", features = ["mainnet"] }
wormhole-raw-vaas = {version = "0.3.0-alpha.1"}
wormhole-query-sdk = { git = "https://github.com/wormholelabs-xyz/wormhole-query-sdk-rust", version = "0.0.1", rev = "0f34cb470f4e3137b53aa91adcbb0c7def280925" }
arrayref = "0.3.8"
wormhole-vaas-serde = { version = "0.1.0" }
wormhole-solana = { git = "https://github.com/guibescos/wormhole-solana", rev="f14b3b54c1e37e1aaf8c2ac2a5e236832ffdb3c2"}
ethabi = "18.0.0"
wormhole-anchor-sdk = { git = "https://github.com/Valentine1898/wormhole-scaffolding", branch = "main" }
hex = "0.4"


[dev-dependencies]
rand = "0.8.5"
quickcheck = "1"
quickcheck_macros = "1"

[profile.release]
overflow-checks = true

[toolchain]
anchor_version = "0.30.1"
