[package]
name = "wormhole-staking-program"
version = "1.4.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
wasm = ["no-entrypoint", "js-sys", "bincode"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "wormhole-anchor-sdk/idl-build"]
default = ["testnet", "idl-build"]
localnet = ["wormhole-solana-consts/localnet"]
testnet = ["wormhole-solana-consts/testnet", "wormhole-anchor-sdk/solana-devnet"]
mainnet = ["wormhole-solana-consts/mainnet", "wormhole-anchor-sdk/mainnet"]

[dependencies]
# The same anchor crates are used as in other wormhole repositories (e.g. wormhole-anchor-sdk)
anchor-lang = { version = "0.30.1", git = "https://github.com/coral-xyz/anchor/", rev = "06527e57c3e59683c36eb0a5c69ee669100b42e5", features = [
    "init-if-needed",
] }
anchor-spl = { version = "0.30.1", git = "https://github.com/coral-xyz/anchor/", rev = "06527e57c3e59683c36eb0a5c69ee669100b42e5"}
anchor-attribute-error= { version = "0.30.1", git = "https://github.com/coral-xyz/anchor/", rev = "06527e57c3e59683c36eb0a5c69ee669100b42e5"}

wasm-bindgen = "0.2.93"
js-sys = { version = "0.3.70", optional = true }
bincode = { version = "1.3.3", optional = true }
bytemuck = { version = "1.16.3", features = ["derive"] }
solana-zk-token-sdk = "1.18.21"
wormhole-solana-consts = { version = "0.3.0-alpha.1" }
wormhole-raw-vaas = {version = "0.3.0-alpha.1"}
wormhole-query-sdk = { git = "https://github.com/wormholelabs-xyz/wormhole-query-sdk-rust", version = "0.0.1", rev = "0f34cb470f4e3137b53aa91adcbb0c7def280925" }
ethabi = "18.0.0"
# TODO: change Change after version 0.30.1-alpha.1 is published https://github.com/wormhole-foundation/wormhole-scaffolding/pull/97
wormhole-anchor-sdk = { git = "https://github.com/wormholelabs-xyz/wormhole-scaffolding", branch = "anchor-sdk-update", default-features = false }


[dev-dependencies]
rand = "0.8.5"
quickcheck = "1"
quickcheck_macros = "1"
hex = "0.4"


[profile.release]
overflow-checks = true

[toolchain]
anchor_version = "0.30.1"
